Fix bugreport ui dark mode

--- a/source/overlay/indexDark.css
+++ b/source/overlay/indexDark.css
@@ -39,10 +39,10 @@
 .lindy-bugreport-button {
     background-color: #404040 !important;
 }
-/* .lindy-bugreport-button, 
-.lindy-bugreport-button > .lindy-ui-icon {
-    color: #1f2937 !important;
-} */
-.lindy-element-picker-caption {
-
+.lindy-bugreport-flag, .lindy-bugreport-flag > .lindy-ui-icon {
+    background-color: #edd75b !important;
+    color: #374151 !important;
+}
+.lindy-bugreport-button:not(.lindy-pressed):hover {
+    filter: brightness(120%);
 }
